[package]
name = "greeter"
version = "0.1.0"
authors = ["yukihane <yukihane.feather@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.66"
# c_fixed_string = "0.2.0"
[lib]
crate-type = ["cdylib"]
